Added a delete function and started editing the swagger page and endpoint for adding new Email Digest Actions.
